add_subdirectory(transfer)
add_subdirectory(kernels)

set(INCLUDE_DIRECTORIES
  ${INCLUDE_DIRECTORIES}
  ${CMAKE_CURRENT_SOURCE_DIR}
  PARENT_SCOPE
)

set(SOURCE
  ${SOURCE}
  PARENT_SCOPE
)

set(GPU_SOURCE
  ${GPU_SOURCE}
  ${CMAKE_CURRENT_SOURCE_DIR}/CudaAdapter.cu
  ${CMAKE_CURRENT_SOURCE_DIR}/KernelWrapper.cu
  ${CMAKE_CURRENT_SOURCE_DIR}/Device.cu
  ${CMAKE_CURRENT_SOURCE_DIR}/Stream.cu
  PARENT_SCOPE
)
