add_subdirectory(enums)

set(INCLUDE_DIRECTORIES
  ${INCLUDE_DIRECTORIES}
  ${CMAKE_CURRENT_SOURCE_DIR}
  PARENT_SCOPE
)

set(SOURCE
  ${SOURCE}
  ${CMAKE_CURRENT_SOURCE_DIR}/Id.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SNP.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/Person.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandler.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactor.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactorHandler.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/DataHandler.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/DataHandlerFactory.cpp
  PARENT_SCOPE
)
